style: parsehtml style

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:9UWHaF0oEAeSy5zm@db.bvtqjovdxybmzbgomqjn.supabase.co:5432/postgres"
+NEXT_PUBLIC_TINY_EDITOR_API_KEY="3gsqd5ah82fgdpke6hi2bisqgtksq2tgznkbmhjwv8i4os1r"
+
